# TicTacToeCPP

./: .gitignore  README.md  build_and_run.sh
TicTacToeUI/TicTacToeUI/: ContentView.swift  TicTacToe-Bridging-Header.h  TicTacToeUIDocument.swift
TicTacToeUI/TicTacToeUI.xcodeproj/: project.pbxproj
TicTacToeUI/TicTacToeUI/libs/: module.modulemap  tictactoe_c_api.h
TicTacToeUI/TicTacToeUITests/: TicTacToeUITests.swift
TicTacToeUI/TicTacToeUIUITests/: TicTacToeUIUITests.swift  TicTacToeUIUITestsLaunchTests.swift
cpp-engine/: CMakeLists.txt
cpp-engine/src/: tictactoe.cpp  tictactoe.h  tictactoe_c_api.cpp
